Collaboration threads working again; make sure documents panel is scrollable and all elements clearly visible.

--- a/client/stylesheets/global.less
+++ b/client/stylesheets/global.less
@@ -6,7 +6,7 @@
    =============================== */
 html {
      overflow: -moz-scrollbars-vertical;
-     overflow-y: scroll;
+     overflow-y: auto;
      overflow-x: hidden;
 }
 
