--- a/client/views/desk/desk.less
+++ b/client/views/desk/desk.less
@@ -90,16 +90,17 @@ div[id^='editorWindow-'] {
 // Desk document panel
 .desk-document-panel {
   position: absolute;
-  right: -300px;
-  width: 300px;
+  right: -350px;
+  width: 350px;
   height: 100%;
   z-index: 99999;
   background: #fff;
-  padding: 8px;
+  padding: 8px 15px 8px 8px;
   .transition(all 0.2s ease);
+  overflow-y: scroll;
 }
 .desk-document-panel.is-open {
-  .translateX(-300px);
+  .translateX(-350px);
 }
 .desk-document-panel .js-close-panel {
   color: #bbb;
